--- a/client/src/styles/components/Card/_Card.scss
+++ b/client/src/styles/components/Card/_Card.scss
@@ -87,6 +87,7 @@
           transform: translate(0px, 2.8px);
           cursor: pointer;
           margin-left: 5px;
+
           img {
             box-shadow: none;
             height: 16px;
@@ -149,13 +150,18 @@
 
       .button-container {
         .btn {
-          background: $color-2;
-          width: 240px;
+          background: $color-1;
           transform: translateY(-3px);
+          width: inherit;
+          transition: 0.2s;
+          border-radius: 15px;
+          border: none;
+          padding: 8px 20px;
+          cursor: pointer;
+          margin: 10px 2px;
 
           &:hover {
-            background: $color-1;
-            width: 250px;
+            background: $color-2;
             letter-spacing: 1px;
           }
         }
@@ -386,7 +392,7 @@
         background: $color-4;
         border-radius: 20px;
         padding: 20px;
-        font-size: 18px;
+        font-size: 16px;
         border: none;
 
         &:focus {
@@ -399,7 +405,7 @@
         padding: 12px 16px;
         width: 120px;
         background: $color-2;
-        border-radius: 20px ;
+        border-radius: 20px;
         border: none;
         transition: 0.2s;
         float: right;
