--- a/client/src/styles/pages/_feed.scss
+++ b/client/src/styles/pages/_feed.scss
@@ -109,8 +109,9 @@
                         }
 
                         @media screen and(max-width: 440px) {
-                            left: 14px;
-                            top: 60px;
+                            left: 130px;
+                            top: 0px
+                            
                         }
                     }
                 }
